syntax = "proto3";

package core.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "validate/validate.proto";
import "buf/validate/validate.proto";

import "common/pagination/pagination.proto";
import "common/enum/enum.proto";

option go_package = "backend-service/api/core/service/v1;v1";

service PostService {
  // 创建岗位
	rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);
  // 更新岗位
	rpc UpdatePost (UpdatePostRequest) returns (UpdatePostResponse);
  // 删除岗位
	rpc DeletePost (DeletePostRequest) returns (DeletePostResponse);
  // 获取岗位
	rpc GetPost (GetPostRequest) returns (GetPostResponse);
  // 分页查询岗位
	rpc ListPost (ListPostRequest) returns (ListPostResponse);
}

// 岗位信息
message Post {
  // 岗位ID
  uint32 id = 1;
  // 岗位名称
  optional string name = 2 [
    (buf.validate.field).string = {min_len: 1, max_len: 20},
    (gnostic.openapi.v3.property) = {description: "岗位名称"}
  ];
  // 岗位状态 0 未知 1 启用 2 禁用
  optional enum.Status status = 3 [
    (buf.validate.field).enum.defined_only = true,
    (gnostic.openapi.v3.property) = {description: "岗位状态", default: {number: 1}}
  ];
  // 排序字段
  optional int32 sort = 4 [
    (buf.validate.field).int32 = {gte: 0, lte: 100},
    (gnostic.openapi.v3.property) = {description: "排序字段", default: {number: 10}}
  ];
  // 岗位描述
  optional string remark = 5 [
    (buf.validate.field).string.max_len = 200,
    (gnostic.openapi.v3.property) = {description: "岗位描述"}
  ];
  // 创建时间
  optional string created_at = 6 [
    (gnostic.openapi.v3.property) = {description: "创建时间"}
  ];
  // 更新时间
  optional string updated_at = 7 [
    (gnostic.openapi.v3.property) = {description: "更新时间"}
  ];
}

// 创建岗位请求
message CreatePostRequest {
  Post post = 1 [(buf.validate.field).required = true];
  optional uint32 operator_id = 2 [
    (buf.validate.field).uint32.gt = 0,
    (gnostic.openapi.v3.property) = {description: "操作人ID"}
  ];
}
// 创建岗位响应
message CreatePostResponse {
}

// 更新岗位请求
message UpdatePostRequest {
  uint32 id = 1 [
    (buf.validate.field).uint32.gt = 0,
    (gnostic.openapi.v3.property) = {description: "岗位ID"}
  ];
  Post post = 2 [
    (buf.validate.field).required = true,
    (gnostic.openapi.v3.property) = {description: "岗位信息"}
  ];
  optional uint32 operator_id = 3 [
    (buf.validate.field).uint32.gt = 0,
    (gnostic.openapi.v3.property) = {description: "操作人ID"}
  ];
}
// 更新岗位响应
message UpdatePostResponse {
}

// 删除岗位请求
message DeletePostRequest {
  uint32 id = 1 [
    (buf.validate.field).uint32.gt = 0,
    (gnostic.openapi.v3.property) = {description: "岗位ID"}
  ];
  optional uint32 operator_id = 2 [
    (buf.validate.field).uint32.gt = 0,
    (gnostic.openapi.v3.property) = {description: "操作人ID"}
  ];
}
// 删除岗位响应
message DeletePostResponse {
}

// 获取岗位请求
message GetPostRequest {
  uint32 id = 1 [
    (buf.validate.field).uint32.gt = 0,
    (gnostic.openapi.v3.property) = {description: "岗位ID"}
  ];
}
// 获取岗位响应
message GetPostResponse {
  Post post = 1;
}

// 分页查询岗位请求
message ListPostRequest {
}
// 分页查询岗位响应
message ListPostResponse {
  repeated Post items = 1;
  int32 total = 2;
}